fix: brand page

--- a/dev/public/brand.html
+++ b/dev/public/brand.html
@@ -505,7 +505,7 @@
         </div>
       </header>
       <main class="page-content">
-        <div class="page-inner page-inner--w1 page-inner--mobile_empty">
+        <div class="page-inner page-inner--w1 page-inner--mobile_empty111">
           <div class="filters-block d-block d-lg-none">
             <div class="row mobile-slider"><a href="#">Эко–кожа</a><a href="#">Вискоза / Хлопок</a><a href="#">Шерсть / Кашемир</a><a href="#">Комбинезоны</a><a href="#">Цвет</a>
             </div>
@@ -1621,12 +1621,8 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">One size</span>
                           </label>
-                          <label class="form-checkbox">
-                            <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">Рост H1</span>
-                          </label>
-                          <label class="form-checkbox">
-                            <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">Рост H1</span>
-                          </label>
+                          <label class="form-checkbox"><span class="form-checkbox-title">Рост H1</span></label>
+                          <label class="form-checkbox"><span class="form-checkbox-title">Рост H1    </span></label>
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XS(RU36-38)</span>
                           </label>
