--- a/dev/public/shops.html
+++ b/dev/public/shops.html
@@ -1151,12 +1151,8 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">One size</span>
                           </label>
-                          <label class="form-checkbox">
-                            <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">Рост H1</span>
-                          </label>
-                          <label class="form-checkbox">
-                            <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">Рост H1</span>
-                          </label>
+                          <label class="form-checkbox"><span class="form-checkbox-title">Рост H1</span></label>
+                          <label class="form-checkbox"><span class="form-checkbox-title">Рост H1    </span></label>
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XS(RU36-38)</span>
                           </label>
