--- a/dev/public/search.html
+++ b/dev/public/search.html
@@ -1609,12 +1609,8 @@
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">One size</span>
                           </label>
-                          <label class="form-checkbox">
-                            <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">Рост H1</span>
-                          </label>
-                          <label class="form-checkbox">
-                            <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">Рост H1</span>
-                          </label>
+                          <label class="form-checkbox"><span class="form-checkbox-title">Рост H1</span></label>
+                          <label class="form-checkbox"><span class="form-checkbox-title">Рост H1    </span></label>
                           <label class="form-checkbox">
                             <input class="form-item form-item--checkbox" type="checkbox"><span class="form-checkbox-title">XS(RU36-38)</span>
                           </label>
@@ -2074,6 +2070,78 @@
       </div>
       <p>Ссылка для восстановления пароля отправлена на ваш e-mail. Проверьте почту.</p>
     </div>
+        <div class="page-popup page-popup-w565 mfp-hide" id="popup-0">
+          <div class="page-popup-heading">
+            <div class="page-popup-heading-title center h1">BRUSNIKA «Ереван Плаза»</div><img class="w100" src="../dummy/shops/shop-1.png">
+          </div>
+          <div class="item-shop-title item-shop-title--onmap">BRUSNIKA «Ереван Плаза»</div>
+          <div class="item-shop-address item-shop-address--onmap">м. Войковская, м. Тульская, ул. Большая Тульская, д. 13, ТРЦ &quot;Ереван Плаза&quot;, 2 этаж</div>
+          <div class="item-shop-time item-shop-time--onmap">Пн-Вс: с 10:00 до 22:00</div>
+          <div class="item-shop-phone item-shop-phone--onmap">8 926 734 07 15</div>
+        </div>
+        <div class="page-popup page-popup-w565 mfp-hide" id="popup-1">
+          <div class="page-popup-heading">
+            <div class="page-popup-heading-title center h1">BRUSNIKA «АФИМОЛЛ Сити»</div><img class="w100" src="../dummy/shops/shop-1.png">
+          </div>
+          <div class="item-shop-title item-shop-title--onmap">BRUSNIKA «АФИМОЛЛ Сити»</div>
+          <div class="item-shop-address item-shop-address--onmap">м. Деловой центр, Пресненская наб., д. 2, ТРЦ «АФИМОЛЛ Сити», 3 этаж </div>
+          <div class="item-shop-time item-shop-time--onmap">Вс-Чт: с 10:00 до 22:00, Пт-Сб: с 10:00 до 23:00</div>
+          <div class="item-shop-phone item-shop-phone--onmap">8 985 926 51 36</div>
+        </div>
+        <div class="page-popup page-popup-w565 mfp-hide" id="popup-2">
+          <div class="page-popup-heading">
+            <div class="page-popup-heading-title center h1">BRUSNIKA «Капитолий»</div><img class="w100" src="../dummy/shops/shop-1.png">
+          </div>
+          <div class="item-shop-title item-shop-title--onmap">BRUSNIKA «Капитолий»</div>
+          <div class="item-shop-address item-shop-address--onmap">м. Университет, пр-т Вернадского, д. 6, ТЦ «Капитолий», 2 этаж</div>
+          <div class="item-shop-time item-shop-time--onmap">Пн-Вс: с 10:00 до 22:00</div>
+          <div class="item-shop-phone item-shop-phone--onmap">8 985 926 51 36</div>
+        </div>
+        <div class="page-popup page-popup-w565 mfp-hide" id="popup-3">
+          <div class="page-popup-heading">
+            <div class="page-popup-heading-title center h1">BRUSNIKA «Метрополис»</div><img class="w100" src="../dummy/shops/shop-1.png">
+          </div>
+          <div class="item-shop-title item-shop-title--onmap">BRUSNIKA «Метрополис»</div>
+          <div class="item-shop-address item-shop-address--onmap">Адрес: м. Войковская, Ленинградское ш., д. 16А, ТЦ &quot;Метрополис&quot;, 2 этаж</div>
+          <div class="item-shop-time item-shop-time--onmap">Режим работы: Пн-Вс: с 10:00 до 23:00</div>
+          <div class="item-shop-phone item-shop-phone--onmap">8 919 720 04 57</div>
+        </div>
+        <div class="page-popup page-popup-w565 mfp-hide" id="popup-4">
+          <div class="page-popup-heading">
+            <div class="page-popup-heading-title center h1">BRUSNIKA «Авиапарк»</div><img class="w100" src="../dummy/shops/shop-1.png">
+          </div>
+          <div class="item-shop-title item-shop-title--onmap">BRUSNIKA «Авиапарк»</div>
+          <div class="item-shop-address item-shop-address--onmap">м. ЦСКА, Ходынский бульвар, д. 4, ТЦ «Авиапарк», 2 этаж</div>
+          <div class="item-shop-time item-shop-time--onmap">Вс-Чт: с 10:00 до 22:00</div>
+          <div class="item-shop-phone item-shop-phone--onmap">8 985 115 95 42</div>
+        </div>
+        <div class="page-popup page-popup-w565 mfp-hide" id="popup-5">
+          <div class="page-popup-heading">
+            <div class="page-popup-heading-title center h1">BRUSNIKA «Европарк»</div><img class="w100" src="../dummy/shops/shop-1.png">
+          </div>
+          <div class="item-shop-title item-shop-title--onmap">BRUSNIKA «Европарк»</div>
+          <div class="item-shop-address item-shop-address--onmap">м. Крылатское, Рублевское шоссе, д. 62, МТК «Европарк», 1 этаж</div>
+          <div class="item-shop-time item-shop-time--onmap">Пн-Вс: с 10:00 до 22:00</div>
+          <div class="item-shop-phone item-shop-phone--onmap">8 964 646 82 34</div>
+        </div>
+        <div class="page-popup page-popup-w565 mfp-hide" id="popup-6">
+          <div class="page-popup-heading">
+            <div class="page-popup-heading-title center h1">BRUSNIKA Лесная</div><img class="w100" src="../dummy/shops/shop-1.png">
+          </div>
+          <div class="item-shop-title item-shop-title--onmap">BRUSNIKA Лесная</div>
+          <div class="item-shop-address item-shop-address--onmap">г. Москва, м. Белорусская, ул. Лесная, д. 10-16</div>
+          <div class="item-shop-time item-shop-time--onmap">Пн-Вс: с 10:00 до 22:00</div>
+          <div class="item-shop-phone item-shop-phone--onmap">8 919 720 04 32</div>
+        </div>
+        <div class="page-popup page-popup-w565 mfp-hide" id="popup-7">
+          <div class="page-popup-heading">
+            <div class="page-popup-heading-title center h1">BRUSNIKA «Модный Сезон»</div><img class="w100" src="../dummy/shops/shop-1.png">
+          </div>
+          <div class="item-shop-title item-shop-title--onmap">BRUSNIKA «Модный Сезон»</div>
+          <div class="item-shop-address item-shop-address--onmap">м. Охотный ряд, ул.Охотный ряд., д. 2, ТГ «Модный сезон», 2 этаж</div>
+          <div class="item-shop-time item-shop-time--onmap">Пн-Вс: с 10:00 до 22:00</div>
+          <div class="item-shop-phone item-shop-phone--onmap">8 926 419 36 33</div>
+        </div>
     <div class="page-popup page-popup--checked mfp-hide" id="checkout-popup">
       <div class="page-popup-heading">
         <div class="page-popup-title uppercase">ВЫБРАТЬ ПУНКТ ВЫДАЧИ</div>
@@ -2180,5 +2248,14 @@
     <script type="text/javascript" src="../../js/project.js?v=31-01-22"></script>
     <script type="module" src="../../js/plugins/swipe.js"></script>
     <script type="text/javascript" src="../../js/scrollPage.js"></script>
+    <div class="page-popup mfp-hide" id="change-color-popup">
+      <div class="page-popup-heading">
+        <div class="page-popup-heading-title center h1">Выберите цвет </div>
+      </div>
+      <ul class="product-list"> 
+        <li><a class="product-list-link" href="#"><span class="product-list-link__img"><img class="product-list-img product-list-img-1" src="../dummy/slider/c1-small.png" alt="красный цвет" data-imgsrcnew="../dummy/slider/c1-small.png"><span>Коричневый </span></span><span>&gt;</span></a></li>
+        <li class="product-list-item"><a class="product-list-link" href="#"><span class="product-list-link__img"><img class="product-list-img product-list-img-2" src="../dummy/slider/c2-small.png" alt="зеленый цвет" data-imgsrcnew="../dummy/slider/c2-small.png"><span>Бежевый  </span></span><span>&gt; </span></a></li>
+      </ul>
+    </div>
   </body>
 </html>
